--- a/styles/main.css
+++ b/styles/main.css
@@ -168,6 +168,7 @@ body {
 @media (max-width: 992px) {
   .hero-bg-image {
     background-size: 48%;
+    padding: 80px 16px 100px;
   }
 }
 .hero-bg-image .hero-content {
@@ -288,6 +289,7 @@ body {
 .benefits-content-item {
   justify-content: space-around;
   margin-bottom: 250px;
+  gap: 30px;
 }
 .benefits-content-item:last-child {
   margin-bottom: 0;
@@ -299,14 +301,9 @@ body {
   width: 50%;
   height: auto;
 }
-@media (max-width: 1200px) {
-  .benefits-content-item img {
-    width: 40%;
-  }
-}
 
 .benefits-txt {
-  max-width: 493px;
+  max-width: 39.5%;
 }
 .benefits-txt-head {
   font-weight: 600;
@@ -319,10 +316,22 @@ body {
     font-size: 45px;
   }
 }
+@media (max-width: 992px) {
+  .benefits-txt-head {
+    font-size: 29px;
+    line-height: 45px;
+  }
+}
 .benefits-txt-parag {
   font-size: 20px;
   line-height: 30px;
   margin-bottom: 30px;
+}
+@media (max-width: 992px) {
+  .benefits-txt-parag {
+    font-size: 15px;
+    line-height: 25px;
+  }
 }
 .benefits-txt-anchor {
   font-weight: 600;
@@ -332,6 +341,12 @@ body {
 .benefits-txt-anchor:hover {
   color: var(--color-brand);
   transition: all 0.3s ease-in-out;
+}
+@media (max-width: 992px) {
+  .benefits-txt-anchor {
+    font-size: 15px;
+    line-height: 25px;
+  }
 }
 
 .localise {
@@ -379,19 +394,32 @@ body {
   max-width: 1287px;
   padding: 154px 16px 187px;
 }
+@media (max-width: 992px) {
+  .boost-content {
+    padding: 100px 16px 120px;
+  }
+}
 .boost-content-head {
   font-weight: 600;
   font-size: 50px;
   line-height: 60px;
   margin-bottom: 75px;
+  text-align: center;
 }
 .boost-content-items {
-  -moz-column-gap: 31px;
-       column-gap: 31px;
+  row-gap: 30px;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 
 .boost-item {
   flex-direction: column;
+}
+@media (max-width: 1259px) {
+  .boost-item {
+    text-align: center;
+    align-items: center;
+  }
 }
 .boost-item-wrap {
   height: 201px;
@@ -446,6 +474,10 @@ body {
   margin-bottom: 7px;
 }
 
+.human {
+  align-self: center;
+}
+
 .translation {
   background-color: #dabc98;
 }
@@ -496,6 +528,12 @@ body {
   font-weight: 600;
   font-size: 65px;
   line-height: 75px;
+}
+@media (max-width: 992px) {
+  .integrate-content-head {
+    font-size: 55px;
+    line-height: 65px;
+  }
 }
 .integrate-content-paragraph {
   font-size: 25px;
@@ -571,6 +609,12 @@ body {
   -moz-column-gap: 110px;
        column-gap: 110px;
   padding-bottom: 95px;
+}
+@media (max-width: 992px) {
+  .footer-content-case {
+    -moz-column-gap: 70px;
+         column-gap: 70px;
+  }
 }
 
 .footer-bottom {
