--- a/styles/main.scss
+++ b/styles/main.scss
@@ -22,6 +22,24 @@
 	--color-brand: #ff6336;
 }
 
+html {
+	@media (max-width: 1200px) {
+		font-size: 12px;
+	}
+
+	@media (max-width: 992px) {
+		font-size: 10px;
+	}
+
+	@media (max-width: 768px) {
+		font-size: 8px;
+	}
+
+	@media (max-width: 600px) {
+		font-size: 7px;
+	}
+}
+
 body {
 	font-family: "Graphik LC TT", sans-serif;
 	background-color: #fff;
@@ -60,6 +78,11 @@ body {
 	max-width: 1338px;
 	justify-content: space-between;
 	padding: 25px 16px;
+
+	@media (max-width: 600px) {
+		flex-direction: column;
+		gap: 20px;
+	}
 }
 
 .navigation {
@@ -70,27 +93,39 @@ body {
 	}
 
 	@media (max-width: 992px) {
-		column-gap: 15px;
+		column-gap: 10px;
+	}
+
+	@media (max-width: 600px) {
+		flex-direction: column;
+		gap: 20px;
 	}
 
 	.logo {
 		align-self: center;
+		width: 18%;
+		height: auto;
+
+		@media (max-width: 600px) {
+			width: 35%;
+		}
+
+		img {
+			width: 100%;
+		}
 	}
 
 	.main-menu {
 		column-gap: 50px;
 
-		@media (max-width: 1200px) {
-			column-gap: 30px;
-		}
-
-		@media (max-width: 992px) {
-			column-gap: 15px;
+		@media (max-width: 768px) {
+			column-gap: 28px;
 		}
 
 		&-item {
 			font-weight: 400;
 			font-size: 15px;
+			font-size: 1.07rem;
 			line-height: 20px;
 
 			&:hover {
@@ -99,7 +134,12 @@ body {
 			}
 
 			@media (max-width: 992px) {
-				font-size: 13px;
+				// font-size: 13px;
+				// font-size: 0.93rem;
+			}
+
+			@media (max-width: 600px) {
+				font-size: 1.5rem;
 			}
 		}
 	}
@@ -113,19 +153,25 @@ body {
 		padding: 13px 36px;
 		font-weight: 600;
 		font-size: 16px;
+		font-size: 1.14rem;
 		line-height: 1;
+
+		@media (max-width: 992px) {
+			padding: 10px 10px;
+			font-size: 14px;
+			font-size: 1rem;
+			align-self: center;
+		}
+
+		@media (max-width: 600px) {
+			display: none;
+		}
 
 		&:hover {
 			background-color: var(--color-brand);
 			color: #fff;
 			border: 1px solid var(--color-brand);
 			transition: all 0.3s ease-in-out;
-		}
-
-		@media (max-width: 992px) {
-			padding: 10px 10px;
-			font-size: 14px;
-			align-self: center;
 		}
 	}
 
@@ -135,6 +181,7 @@ body {
 		color: #ffffff;
 		font-weight: 600;
 		font-size: 16px;
+		font-size: 1.14rem;
 		line-height: 1;
 		border: 1px solid transparent;
 
@@ -147,7 +194,8 @@ body {
 
 		@media (max-width: 992px) {
 			padding: 10px 10px;
-			font-size: 14px;
+			// font-size: 14px;
+			// font-size: 1rem;
 			align-self: center;
 		}
 	}
@@ -164,44 +212,75 @@ body {
 		background-position: 95%;
 		background-size: 50%;
 
+		@media (max-width: 1200px) {
+			padding: 100px 16px 130px;
+		}
+
 		@media (max-width: 992px) {
 			background-size: 48%;
 			padding: 80px 16px 100px;
 		}
 
+		@media (max-width: 768px) {
+			background: none;
+			padding: 50px 16px 70px;
+		}
+
 		.hero-content {
 			max-width: 552px;
+
+			@media (max-width: 768px) {
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+				gap: 30px;
+				text-align: center;
+				justify-content: center;
+				max-width: fit-content;
+			}
 
 			&-head {
 				font-weight: 600;
 				font-size: 65px;
+				font-size: 4.64rem;
 				line-height: 70px;
+				line-height: 5rem;
 				margin-bottom: 0.8em;
 
 				@media (max-width: 1200px) {
-					font-size: 60px;
+					// font-size: 60px;
 				}
 
 				@media (max-width: 992px) {
-					font-size: 50px;
-					line-height: 55px;
+					// font-size: 50px;
+					// line-height: 55px;
+				}
+
+				@media (max-width: 768px) {
+					margin-bottom: 0;
 				}
 			}
 
 			&-paragraph {
 				font-size: 25px;
+				font-size: 1.785rem;
 				line-height: 35px;
+				line-height: 2.5rem;
 				margin-bottom: 51px;
 				max-width: 471px;
 
 				@media (max-width: 1200px) {
-					font-size: 20px;
+					// font-size: 20px;
 					max-width: 450px;
 				}
 
 				@media (max-width: 992px) {
 					max-width: 338px;
-					font-size: 18px;
+					// font-size: 18px;
+				}
+
+				@media (max-width: 768px) {
+					margin-bottom: 0;
 				}
 			}
 
@@ -209,12 +288,17 @@ body {
 				column-gap: 10px;
 				margin-bottom: 25px;
 
+				@media (max-width: 768px) {
+					margin-bottom: 0;
+				}
+
 				.butt-try {
 					background-color: var(--color-brand);
 					color: #fff;
 					padding: 22px 42px;
 					font-weight: 600;
 					font-size: 16px;
+					font-size: 1.14rem;
 					line-height: 1;
 					color: #ffffff;
 					border: 1px solid transparent;
@@ -228,7 +312,11 @@ body {
 
 					@media (max-width: 992px) {
 						padding: 12px 22px;
-						font-size: 12px;
+						// font-size: 12px;
+					}
+
+					@media (max-width: 600px) {
+						padding: 10px 20px;
 					}
 				}
 
@@ -237,6 +325,7 @@ body {
 					border: 1px solid rgba(0, 0, 0, 0.5);
 					font-weight: 600;
 					font-size: 16px;
+					font-size: 1.14rem;
 					line-height: 1;
 
 					&:hover {
@@ -248,13 +337,18 @@ body {
 
 					@media (max-width: 992px) {
 						padding: 12px 19px;
-						font-size: 12px;
+						// font-size: 12px;
+					}
+
+					@media (max-width: 600px) {
+						padding: 10px 16px;
 					}
 				}
 			}
 
 			&-additional {
 				font-size: 15px;
+				font-size: 1.07rem;
 				line-height: 25px;
 			}
 		}
@@ -268,10 +362,16 @@ body {
 		max-width: 1243px;
 		padding: 108px 16px 104px;
 
+		@media (max-width: 992px) {
+			padding: 50px 16px;
+		}
+
 		&-head {
 			font-weight: 600;
 			font-size: 50px;
+			font-size: 3.57rem;
 			line-height: 60px;
+			line-height: 4.275rem;
 			margin-bottom: 70px;
 		}
 
@@ -279,6 +379,10 @@ body {
 			justify-content: center;
 			flex-wrap: wrap;
 			gap: 80px;
+
+			@media (max-width: 600px) {
+				gap: 50px;
+			}
 		}
 	}
 }
@@ -290,10 +394,35 @@ body {
 		max-width: 1290px;
 		padding: 90px 16px 150px;
 
+		@media (max-width: 768px) {
+			padding: 70px 16px 110px;
+		}
+
+		@media (max-width: 600px) {
+			padding: 50px 16px 70px;
+		}
+
 		&-item {
 			justify-content: space-around;
 			margin-bottom: 250px;
 			gap: 30px;
+
+			@media (max-width: 600px) {
+				flex-direction: column-reverse;
+				text-align: center;
+			}
+
+			@media (max-width: 992px) {
+				margin-bottom: 150px;
+			}
+
+			@media (max-width: 768px) {
+				margin-bottom: 120px;
+			}
+
+			@media (max-width: 600px) {
+				margin-bottom: 40px;
+			}
 
 			&:last-child {
 				margin-bottom: 0;
@@ -301,6 +430,16 @@ body {
 
 			&:nth-child(even) {
 				flex-direction: row-reverse;
+				column-gap: 135px;
+
+				@media (max-width: 992px) {
+					column-gap: 80px;
+				}
+
+				@media (max-width: 600px) {
+					flex-direction: column-reverse;
+					text-align: center;
+				}
 			}
 
 			img {
@@ -312,39 +451,62 @@ body {
 }
 
 .benefits-txt {
-	max-width: 39.5%;
+	// max-width: 39.5%;
+
+	@media (max-width: 600px) {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		gap: 20px;
+	}
 
 	&-head {
 		font-weight: 600;
 		font-size: 50px;
+		font-size: 3.57rem;
 		line-height: 60px;
+		line-height: 4.275rem;
 		margin-bottom: 30px;
+		max-width: 83%;
 
 		@media (max-width: 1200px) {
-			font-size: 45px;
+			// font-size: 45px;
 		}
 
 		@media (max-width: 992px) {
-			font-size: 29px;
-			line-height: 45px;
+			// font-size: 29px;
+			// line-height: 45px;
+		}
+
+		@media (max-width: 600px) {
+			margin: 0;
 		}
 	}
 
 	&-parag {
 		font-size: 20px;
+		font-size: 1.428rem;
 		line-height: 30px;
+		line-height: 2.142rem;
 		margin-bottom: 30px;
+		max-width: 83%;
 
 		@media (max-width: 992px) {
-			font-size: 15px;
-			line-height: 25px;
+			// font-size: 15px;
+			// line-height: 25px;
+		}
+
+		@media (max-width: 600px) {
+			margin: 0;
 		}
 	}
 
 	&-anchor {
 		font-weight: 600;
 		font-size: 20px;
+		font-size: 1.248rem;
 		line-height: 30px;
+		line-height: 2.142rem;
 
 		&:hover {
 			color: var(--color-brand);
@@ -352,8 +514,8 @@ body {
 		}
 
 		@media (max-width: 992px) {
-			font-size: 15px;
-			line-height: 25px;
+			// font-size: 15px;
+			// line-height: 25px;
 		}
 	}
 }
@@ -365,10 +527,16 @@ body {
 		max-width: 1172px;
 		padding: 120px 16px 147px;
 
+		@media (max-width: 768px) {
+			padding: 75px 16px;
+		}
+
 		&-head {
 			font-weight: 600;
 			font-size: 50px;
+			font-size: 3.57rem;
 			line-height: 60px;
+			line-height: 4.275rem;
 			margin-bottom: 79px;
 		}
 
@@ -376,29 +544,36 @@ body {
 			justify-content: space-around;
 			flex-wrap: wrap;
 			row-gap: 75px;
+
+			@media (max-width: 768px) {
+				row-gap: 40px;
+			}
 		}
 	}
 }
 
 .localise-item {
 	flex-direction: column;
+	row-gap: 23px;
 
 	&-image {
 		align-self: center;
-		margin-bottom: 26px;
 	}
 
 	&-heading {
 		font-weight: 600;
 		font-size: 25px;
+		font-size: 1.785rem;
 		line-height: 35px;
-		margin-bottom: 20px;
+		line-height: 2.5rem;
 	}
 
 	&-paragraph {
 		font-size: 18px;
+		font-size: 1.285rem;
 		line-height: 25px;
-		width: 330px;
+		line-height: 1.785rem;
+		width: 24.1rem;
 	}
 }
 
@@ -413,12 +588,22 @@ body {
 			padding: 100px 16px 120px;
 		}
 
+		@media (max-width: 768px) {
+			padding: 50px 16px 70px;
+		}
+
 		&-head {
 			font-weight: 600;
 			font-size: 50px;
+			font-size: 3.57rem;
 			line-height: 60px;
+			line-height: 4.275rem;
 			margin-bottom: 75px;
 			text-align: center;
+
+			@media (max-width: 768px) {
+				margin-bottom: 40px;
+			}
 		}
 
 		&-items {
@@ -441,6 +626,10 @@ body {
 		height: 201px;
 		margin-bottom: 50px;
 
+		@media (max-width: 768px) {
+			margin-bottom: 30px;
+		}
+
 		&-img {
 			align-self: center;
 		}
@@ -449,20 +638,30 @@ body {
 	&-heading {
 		font-weight: 600;
 		font-size: 30px;
+		font-size: 2.142rem;
 		line-height: 40px;
+		line-height: 2.857rem;
 		margin-bottom: 34px;
+
+		@media (max-width: 768px) {
+			margin-bottom: 20px;
+		}
 	}
 
 	&-paragraph {
 		font-size: 20px;
+		font-size: 1.428rem;
 		line-height: 30px;
+		line-height: 2.142rem;
 		margin-bottom: 25px;
-		max-width: 409px;
+		width: 35rem;
 	}
 
 	&-link {
 		font-size: 20px;
+		font-size: 1.428rem;
 		line-height: 30px;
+		line-height: 2.142rem;
 	}
 }
 
@@ -473,30 +672,52 @@ body {
 		max-width: 1290px;
 		padding: 53px 16px 105px;
 
+		@media (max-width: 768px) {
+			padding-bottom: 65px;
+		}
+
 		&-wrap {
 			column-gap: 59px;
+
+			@media (max-width: 768px) {
+				gap: 30px;
+				flex-direction: column-reverse;
+				align-items: center;
+			}
+		}
+
+		div {
+			@media (max-width: 768px) {
+				text-align: center;
+			}
 		}
 	}
 }
 
 .quote-paragraph {
 	font-size: 30px;
+	font-size: 2.142rem;
 	line-height: 40px;
+	line-height: 2.857rem;
 	margin-bottom: 23px;
 
 	@media (max-width: 1200px) {
-		font-size: 25px;
+		// font-size: 25px;
 	}
 }
 
 .quote-caption {
 	font-size: 15px;
+	font-size: 1.07rem;
 	line-height: 25px;
+	line-height: 1.785rem;
 	margin-bottom: 7px;
 }
 
 .human {
 	align-self: center;
+	width: 35%;
+	height: auto;
 }
 
 .translation {
@@ -506,17 +727,34 @@ body {
 		max-width: 1248px;
 		padding: 79px 16px 84px;
 
+		@media (max-width: 768px) {
+			flex-direction: column;
+			padding: 40px 16px 50px;
+			row-gap: 40px;
+		}
+
 		&-wrap {
 			gap: 67px;
 
+			@media (max-width: 768px) {
+				text-align: center;
+			}
+
 			.translation-cake {
 				align-self: center;
+
+				@media (max-width: 768px) {
+					width: 20%;
+					height: auto;
+				}
 			}
 
 			.translation-heading {
 				font-weight: 600;
 				font-size: 35px;
+				font-size: 2.5rem;
 				line-height: 50px;
+				line-height: 3.57rem;
 				padding: 10px;
 			}
 
@@ -530,12 +768,34 @@ body {
 			border-left: 1px solid #000;
 			padding: 30px 0 30px 71px;
 
-			img {
-				align-self: center;
-			}
-
 			@media (max-width: 1200px) {
 				flex-direction: column;
+			}
+
+			@media (max-width: 992px) {
+				padding: 30px 0 30px 40px;
+			}
+
+			@media (max-width: 768px) {
+				flex-direction: row;
+				justify-content: space-evenly;
+				border-left: 0;
+				border-top: 1px solid black;
+				padding: 35px 0 0 0;
+				gap: 0;
+			}
+
+			img {
+				align-self: flex-start;
+
+				@media (max-width: 992px) {
+					width: 85%;
+					height: auto;
+				}
+
+				@media (max-width: 768px) {
+					width: auto;
+				}
 			}
 		}
 	}
@@ -549,22 +809,30 @@ body {
 		padding: 165px 16px 162px;
 		flex-direction: column;
 
+		@media (max-width: 768px) {
+			padding: 35px 16px 35px;
+		}
+
 		&-head {
 			font-weight: 600;
 			font-size: 65px;
+			font-size: 4.64rem;
 			line-height: 75px;
+			line-height: 7.357rem;
 
 			@media (max-width: 992px) {
-				font-size: 55px;
-				line-height: 65px;
+				// font-size: 55px;
+				// line-height: 65px;
 			}
 		}
 
 		&-paragraph {
 			font-size: 25px;
+			font-size: 1.785rem;
 			line-height: 30px;
+			line-height: 2.143rem;
 			margin-bottom: 25px;
-			max-width: 539px;
+			max-width: 43%;
 		}
 
 		&-image {
@@ -576,10 +844,11 @@ body {
 		&-anchor {
 			font-weight: 600;
 			font-size: 16px;
+			font-size: 1.143rem;
 			line-height: 1;
 			color: #ffffff;
 			background-color: var(--color-brand);
-			padding: 27px 20px 27px 20px;
+			padding: 27px 20px;
 			display: inline-block;
 			border: 1px solid transparent;
 
@@ -588,6 +857,14 @@ body {
 				color: #000000;
 				border: 1px solid rgba(0, 0, 0, 0.5);
 				transition: all 0.3s ease-in-out;
+			}
+
+			@media (max-width: 768px) {
+				padding: 20px 13px;
+			}
+
+			@media (max-width: 600px) {
+				padding: 12px 6px;
 			}
 		}
 	}
@@ -601,24 +878,37 @@ body {
 		padding: 119px 16px 161px;
 		flex-direction: column;
 
+		@media (max-width: 768px) {
+			padding: 60px 16px;
+		}
+
 		&-head {
 			font-weight: 600;
 			font-size: 65px;
+			font-size: 4.642rem;
 			line-height: 75px;
+			line-height: 5.257rem;
 			margin-bottom: 29px;
 		}
 
 		&-paragraph {
 			font-size: 20px;
+			font-size: 1.428rem;
 			line-height: 30px;
+			line-height: 2.143rem;
 			margin-bottom: 54px;
+
+			@media (max-width: 768px) {
+				margin-bottom: 25px;
+			}
 		}
 
 		&-anchor {
 			font-weight: 600;
 			font-size: 17px;
+			font-size: 1.214rem;
 			line-height: 1;
-			padding: 27px 40px 27px 40px;
+			padding: 27px 40px;
 			display: inline-block;
 			background-color: #000000;
 			color: #ffffff;
@@ -628,6 +918,14 @@ body {
 				background-color: #fff;
 				color: #000000;
 				transition: all 0.3s ease-in-out;
+			}
+
+			@media (max-width: 768px) {
+				padding: 20px 33px;
+			}
+
+			@media (max-width: 600px) {
+				padding: 12px 20px;
 			}
 		}
 	}
@@ -647,6 +945,17 @@ body {
 			@media (max-width: 992px) {
 				column-gap: 70px;
 			}
+
+			@media (max-width: 768px) {
+				gap: 50px 70px;
+				flex-direction: column;
+				align-items: center;
+				padding-bottom: 50px;
+			}
+		}
+
+		@media (max-width: 768px) {
+			padding-top: 60px;
 		}
 	}
 }
@@ -655,20 +964,41 @@ body {
 	padding-top: 47px;
 	border-top: 1px solid #000;
 	justify-content: space-between;
+	align-items: center;
+
+	@media (max-width: 768px) {
+		flex-direction: column;
+		justify-content: center;
+		gap: 20px;
+	}
 
 	&-company {
 		column-gap: 15px;
-		align-items: flex-start;
+		align-items: center;
+
+		@media (max-width: 768px) {
+			flex-direction: column;
+			justify-content: center;
+			gap: 20px;
+		}
 
 		.footer-paragraph {
 			max-width: 301px;
 			font-size: 12px;
+			font-size: 0.857rem;
 			line-height: 15px;
+			line-height: 1.07rem;
 		}
 	}
 
 	&-rights {
 		padding-right: 76px;
+		font-size: 1rem;
+
+		@media (max-width: 768px) {
+			text-align: center;
+			padding: 0;
+		}
 	}
 }
 
@@ -682,60 +1012,85 @@ body {
 			column-gap: 60px;
 		}
 	}
+
+	@media (max-width: 768px) {
+		justify-content: center;
+		text-align: center;
+	}
 }
 
 .nav-item-head {
 	font-weight: 600;
 	font-size: 20px;
+	font-size: 1.428rem;
 	line-height: 25px;
+	line-height: 1.785rem;
 	margin-bottom: 21px;
+
+	@media (max-width: 768px) {
+		margin-bottom: 10px;
+	}
 }
 
 .nav-flex-item {
 	font-size: 15px;
+	font-size: 1.07rem;
 	line-height: 15px;
+	line-height: 1.07rem;
 	display: inline-block;
 	margin-bottom: 15px;
-	width: 170px;
+	width: 12.1rem;
 
 	&:hover {
 		color: var(--color-brand);
 		transition: all 0.3s ease-in-out;
+	}
+
+	@media (max-width: 768px) {
+		margin-bottom: 10px;
 	}
 }
 
 .case {
 	flex-direction: column;
 
+	@media (max-width: 768px) {
+		align-items: center;
+		text-align: center;
+	}
+
 	&-head {
 		font-weight: 600;
 		font-size: 40px;
+		font-size: 2.857rem;
 		line-height: 50px;
+		line-height: 3.57rem;
 		margin-bottom: 28px;
 	}
 
 	&-cyclists {
 		margin-bottom: 31px;
-		align-self: flex-start;
 	}
 
 	&-logo {
 		margin-bottom: 11px;
-		align-self: flex-start;
 	}
 
 	&-paragraph {
 		font-size: 20px;
+		font-size: 1.428rem;
 		line-height: 30px;
+		line-height: 2.143rem;
 		margin-bottom: 15px;
-		width: 290px;
+		width: 21rem;
 	}
 
 	&-anchor {
 		font-weight: 600;
 		font-size: 20px;
+		font-size: 1.428rem;
 		line-height: 30px;
-		width: 107px;
+		line-height: 1.143rem;
 
 		&:hover {
 			color: var(--color-brand);
