--- a/styles/main.css
+++ b/styles/main.css
@@ -29,12 +29,12 @@
 }
 @media (max-width: 768px) {
   html {
-    font-size: 8px;
+    font-size: 9px;
   }
 }
 @media (max-width: 600px) {
   html {
-    font-size: 7px;
+    font-size: 8px;
   }
 }
 
@@ -96,8 +96,8 @@ body {
 }
 @media (max-width: 992px) {
   .navigation {
-    -moz-column-gap: 10px;
-         column-gap: 10px;
+    -moz-column-gap: 17px;
+         column-gap: 17px;
   }
 }
 @media (max-width: 600px) {
@@ -129,20 +129,26 @@ body {
          column-gap: 28px;
   }
 }
+@media (max-width: 600px) {
+  .navigation .main-menu {
+    -moz-column-gap: 20px;
+         column-gap: 20px;
+  }
+}
+@media (max-width: 380px) {
+  .navigation .main-menu {
+    -moz-column-gap: 13px;
+         column-gap: 13px;
+  }
+}
 .navigation .main-menu-item {
   font-weight: 400;
-  font-size: 15px;
   font-size: 1.07rem;
-  line-height: 20px;
+  line-height: 1.428rem;
 }
 .navigation .main-menu-item:hover {
   color: var(--color-brand);
   transition: all 0.3s ease-in-out;
-}
-@media (max-width: 600px) {
-  .navigation .main-menu-item {
-    font-size: 1.5rem;
-  }
 }
 
 .header-anchors {
@@ -153,21 +159,18 @@ body {
   border: 1px solid rgba(0, 0, 0, 0.5);
   padding: 13px 36px;
   font-weight: 600;
-  font-size: 16px;
   font-size: 1.14rem;
   line-height: 1;
 }
 @media (max-width: 992px) {
   .header-anchors-login {
     padding: 10px 10px;
-    font-size: 14px;
-    font-size: 1rem;
     align-self: center;
   }
 }
 @media (max-width: 600px) {
   .header-anchors-login {
-    display: none;
+    padding: 10px 15px;
   }
 }
 .header-anchors-login:hover {
@@ -181,7 +184,6 @@ body {
   padding: 13px 21px;
   color: #ffffff;
   font-weight: 600;
-  font-size: 16px;
   font-size: 1.14rem;
   line-height: 1;
   border: 1px solid transparent;
@@ -196,6 +198,11 @@ body {
   .header-anchors-try {
     padding: 10px 10px;
     align-self: center;
+  }
+}
+@media (max-width: 600px) {
+  .header-anchors-try {
+    padding: 10px 15px;
   }
 }
 
@@ -245,9 +252,7 @@ body {
 }
 .hero-bg-image .hero-content-head {
   font-weight: 600;
-  font-size: 65px;
   font-size: 4.64rem;
-  line-height: 70px;
   line-height: 5rem;
   margin-bottom: 0.8em;
 }
@@ -257,9 +262,7 @@ body {
   }
 }
 .hero-bg-image .hero-content-paragraph {
-  font-size: 25px;
   font-size: 1.785rem;
-  line-height: 35px;
   line-height: 2.5rem;
   margin-bottom: 51px;
   max-width: 471px;
@@ -294,7 +297,6 @@ body {
   color: #fff;
   padding: 22px 42px;
   font-weight: 600;
-  font-size: 16px;
   font-size: 1.14rem;
   line-height: 1;
   color: #ffffff;
@@ -320,7 +322,6 @@ body {
   padding: 22px 29px;
   border: 1px solid rgba(0, 0, 0, 0.5);
   font-weight: 600;
-  font-size: 16px;
   font-size: 1.14rem;
   line-height: 1;
 }
@@ -341,9 +342,8 @@ body {
   }
 }
 .hero-bg-image .hero-content-additional {
-  font-size: 15px;
   font-size: 1.07rem;
-  line-height: 25px;
+  line-height: 1.785rem;
 }
 
 .companies {
@@ -360,9 +360,7 @@ body {
 }
 .companies-content-head {
   font-weight: 600;
-  font-size: 50px;
   font-size: 3.57rem;
-  line-height: 60px;
   line-height: 4.275rem;
   margin-bottom: 70px;
 }
@@ -455,9 +453,7 @@ body {
 }
 .benefits-txt-head {
   font-weight: 600;
-  font-size: 50px;
   font-size: 3.57rem;
-  line-height: 60px;
   line-height: 4.275rem;
   margin-bottom: 30px;
   max-width: 83%;
@@ -468,9 +464,7 @@ body {
   }
 }
 .benefits-txt-parag {
-  font-size: 20px;
   font-size: 1.428rem;
-  line-height: 30px;
   line-height: 2.142rem;
   margin-bottom: 30px;
   max-width: 83%;
@@ -482,15 +476,14 @@ body {
 }
 .benefits-txt-anchor {
   font-weight: 600;
-  font-size: 20px;
   font-size: 1.248rem;
-  line-height: 30px;
   line-height: 2.142rem;
 }
 .benefits-txt-anchor:hover {
   color: var(--color-brand);
   transition: all 0.3s ease-in-out;
 }
+
 .localise {
   background-color: #fff8e4;
 }
@@ -505,9 +498,7 @@ body {
 }
 .localise-content-head {
   font-weight: 600;
-  font-size: 50px;
   font-size: 3.57rem;
-  line-height: 60px;
   line-height: 4.275rem;
   margin-bottom: 79px;
 }
@@ -531,15 +522,11 @@ body {
 }
 .localise-item-heading {
   font-weight: 600;
-  font-size: 25px;
   font-size: 1.785rem;
-  line-height: 35px;
   line-height: 2.5rem;
 }
 .localise-item-paragraph {
-  font-size: 18px;
   font-size: 1.285rem;
-  line-height: 25px;
   line-height: 1.785rem;
   width: 24.1rem;
 }
@@ -563,9 +550,7 @@ body {
 }
 .boost-content-head {
   font-weight: 600;
-  font-size: 50px;
   font-size: 3.57rem;
-  line-height: 60px;
   line-height: 4.275rem;
   margin-bottom: 75px;
   text-align: center;
@@ -604,9 +589,7 @@ body {
 }
 .boost-item-heading {
   font-weight: 600;
-  font-size: 30px;
   font-size: 2.142rem;
-  line-height: 40px;
   line-height: 2.857rem;
   margin-bottom: 34px;
 }
@@ -616,17 +599,13 @@ body {
   }
 }
 .boost-item-paragraph {
-  font-size: 20px;
   font-size: 1.428rem;
-  line-height: 30px;
   line-height: 2.142rem;
   margin-bottom: 25px;
   width: 35rem;
 }
 .boost-item-link {
-  font-size: 20px;
   font-size: 1.428rem;
-  line-height: 30px;
   line-height: 2.142rem;
 }
 
@@ -660,16 +639,12 @@ body {
 }
 
 .quote-paragraph {
-  font-size: 30px;
   font-size: 2.142rem;
-  line-height: 40px;
   line-height: 2.857rem;
   margin-bottom: 23px;
 }
 .quote-caption {
-  font-size: 15px;
   font-size: 1.07rem;
-  line-height: 25px;
   line-height: 1.785rem;
   margin-bottom: 7px;
 }
@@ -713,9 +688,7 @@ body {
 }
 .translation-content-wrap .translation-heading {
   font-weight: 600;
-  font-size: 35px;
   font-size: 2.5rem;
-  line-height: 50px;
   line-height: 3.57rem;
   padding: 10px;
 }
@@ -749,6 +722,11 @@ body {
     gap: 0;
   }
 }
+@media (max-width: 400px) {
+  .translation-content-images {
+    justify-content: space-between;
+  }
+}
 .translation-content-images img {
   align-self: flex-start;
 }
@@ -779,15 +757,11 @@ body {
 }
 .integrate-content-head {
   font-weight: 600;
-  font-size: 65px;
   font-size: 4.64rem;
-  line-height: 75px;
   line-height: 7.357rem;
 }
 .integrate-content-paragraph {
-  font-size: 25px;
   font-size: 1.785rem;
-  line-height: 30px;
   line-height: 2.143rem;
   margin-bottom: 25px;
   max-width: 43%;
@@ -799,7 +773,6 @@ body {
 }
 .integrate-content-anchor {
   font-weight: 600;
-  font-size: 16px;
   font-size: 1.143rem;
   line-height: 1;
   color: #ffffff;
@@ -840,16 +813,12 @@ body {
 }
 .local-content-head {
   font-weight: 600;
-  font-size: 65px;
   font-size: 4.642rem;
-  line-height: 75px;
   line-height: 5.257rem;
   margin-bottom: 29px;
 }
 .local-content-paragraph {
-  font-size: 20px;
   font-size: 1.428rem;
-  line-height: 30px;
   line-height: 2.143rem;
   margin-bottom: 54px;
 }
@@ -860,7 +829,6 @@ body {
 }
 .local-content-anchor {
   font-weight: 600;
-  font-size: 17px;
   font-size: 1.214rem;
   line-height: 1;
   padding: 27px 40px;
@@ -944,9 +912,7 @@ body {
 }
 .footer-bottom-company .footer-paragraph {
   max-width: 301px;
-  font-size: 12px;
   font-size: 0.857rem;
-  line-height: 15px;
   line-height: 1.07rem;
 }
 .footer-bottom-rights {
@@ -980,9 +946,7 @@ body {
 
 .nav-item-head {
   font-weight: 600;
-  font-size: 20px;
   font-size: 1.428rem;
-  line-height: 25px;
   line-height: 1.785rem;
   margin-bottom: 21px;
 }
@@ -993,9 +957,7 @@ body {
 }
 
 .nav-flex-item {
-  font-size: 15px;
   font-size: 1.07rem;
-  line-height: 15px;
   line-height: 1.07rem;
   display: inline-block;
   margin-bottom: 15px;
@@ -1022,31 +984,30 @@ body {
 }
 .case-head {
   font-weight: 600;
-  font-size: 40px;
   font-size: 2.857rem;
-  line-height: 50px;
   line-height: 3.57rem;
   margin-bottom: 28px;
 }
 .case-cyclists {
   margin-bottom: 31px;
 }
+@media (max-width: 600px) {
+  .case-cyclists {
+    margin-bottom: 20px;
+  }
+}
 .case-logo {
   margin-bottom: 11px;
 }
 .case-paragraph {
-  font-size: 20px;
   font-size: 1.428rem;
-  line-height: 30px;
   line-height: 2.143rem;
   margin-bottom: 15px;
   width: 21rem;
 }
 .case-anchor {
   font-weight: 600;
-  font-size: 20px;
   font-size: 1.428rem;
-  line-height: 30px;
   line-height: 1.143rem;
 }
 .case-anchor:hover {
